[tool.poetry]
authors = ["timmyliang <820472580@qq.com>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "dayu_widgets MOverlay Widget for QtDesigner"
keywords = ["PySide", "PyQt", "UI", "PySide2", "PyQt5", "dayu_widgets"]
license = "MIT"
name = "dayu_widgets_overlay"
readme = "README.md"
version = "0.1.2"

[tool.poetry.dependencies]
qtpy = "^"
dayu-path = "^0.5.2"
python = ">=2.7,<2.8 || >=3.6.0,<3.10"
singledispatch = {version = "^3.7.0", python = "2.7"}
six = "^1.16.0"

[tool.poetry.dev-dependencies]
PySide2 = "^5.15.2"
black = {version = "^21.12b0", python = ">=3.6.2,<3.10"}
commitizen = {version = "^2.20.0", python = ">=3.6.1,<3.10"}
isort = {version = "^5.10.1", python = ">=3.6.1,<3.10"}
pytest = {version = "^6.2.5", python = ">=3.6.0,<3.11"}
pytest-qt = {version = "^4.0.2", python = ">=3.6.0,<3.10"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.1"
version_files = [
  "pyproject.toml:version",
  "dayu_widgets_overlay/__version__.py",
]

[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 88
target_version = ['py36']

[tool.isort]
atomic = true
filter_files = true
include_trailing_comma = true
known_first_party = ["dayu_widgets_overlay"]
lines_after_imports = 2
lines_between_types = 1
profile = "black"
use_parentheses = true

# Enforce import section headers.
import_heading_firstparty = "Import local modules"
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"

force_single_line = true
force_sort_within_sections = true

# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"
